# CC-Schmervices

./: .editorconfig  .gitignore  Cargo.toml  Ideas.txt  README.md  build.rs  eval  main.css  money.db  setup_env.sh
.sqlx/: query-d6c9d67c610790eeb371992eae7f9968775de003c05a00546300c6c08c291b0f.json
lua/: .luarc.json  money_money.lua  pocket_money.lua  pocket_ui.lua  schmervice_lib.lua  shop.lua
migrations/: 20240128025954_first.sql
src/: api.rs  auth.rs  db_utils.rs  main.rs  util.rs
