[package]
name = "schmervices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4",features = ["ws"]}
leptos = { version = "0.6.3", features = ["ssr"] }
tokio = { version = "1.35.1", features = ["full"] }
# libsql-client = "0.33.4"
totp-rs = { version = "5.5.1", features = ["qr", "gen_secret"] }
serde = { version = "1.0.188", features = ["derive"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
serde_json = "1.0.112"
chrono = "0.4.33"
rand = { version = "0.8.5", features = ["small_rng"] }
eyre = "0.6.11"
color-eyre = "0.6.2"
sqlx = { version = "0.7.3", features = ["tls-rustls", "runtime-tokio", "sqlite"] }
tower-http = { version = "0.5.1", features = ["fs"], default-features = false }
